--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <title>6.6. Итоговые задания</title>
   </head>
   <body></body>
-  <script src="./javaScriptTask.js"></script>
+  <script src="./6.6.1.js"></script>
+  <script src="./6.6.2.js"></script>
+  <script src="./6.6.3.js"></script>
+  <script src="./6.6.4.js"></script>
+  <script src="./6.6.5.js"></script>
 </html>
